--- a/src/parts/control-buttons/control-buttons-styles.css
+++ b/src/parts/control-buttons/control-buttons-styles.css
@@ -58,6 +58,6 @@
 
 @media (max-width: 500px) {
     .controll-button-container {
-        min-width: 100vw;
+        min-width: 95vw;
     }
 }
