--- a/src/parts/difficulty-buttons/difficulty-buttons-styles.css
+++ b/src/parts/difficulty-buttons/difficulty-buttons-styles.css
@@ -20,6 +20,6 @@
 
 @media (max-width: 500px) {
     .button-container {
-        min-width: 100vw;
+        min-width: 95vw;
     }
 }
