--- a/src/parts/number-buttons/number-buttons-styles.css
+++ b/src/parts/number-buttons/number-buttons-styles.css
@@ -16,7 +16,7 @@
 
 @media (max-width: 500px) {
     .number-container {
-        min-width: 100vw;
+        min-width: 95vw;
         min-height: 10vw;
     }
 }
